/*
The file is generated by a scaffold script
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";
package cafm.project.daily_check_procedure;

message DailyCheckProcedure {
  string id = 1;
  string name = 2;
  string description = 3;
  string project_id = 4;
  string equipment_id = 5;
  string equipment_category_group_id = 6;
}
